fix: changes needed for frontend to function